--- a/login/register.html
+++ b/login/register.html
@@ -9,7 +9,7 @@
 <body>
     <div class="navbar">
         <div class="navbar-links">
-            <a href="/index.html">Home</a>
+            <a href="\index.html">Home</a>
         </div>
     <div class="container">
         <form class="signup-form">
